--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    naveen is a brilient
+    naveen is a brilientgjkhgkhkhhkgigjg hbkhkhikhghffh
 </body>
 </html>
