--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    naveen is a brilient he is something
-=======
-    naveen is a brilientgjkhgkhkhhkgigjg hbkhkhikhghffh
->>>>>>> new
+    naveen is a brilientgjkhgkhkhhkgigjg hbkhkhikhghffhg
+    <img src="" alt="" class="image1"><img src="" alt="" class="image2"><img src="" alt="" class="image3"><img src="" alt="" class="image4">
 </body>
 </html>
