--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    naveen is a brilientgjkhgkhkhhkgigjg hbkhkhikhghffhg
+    naveen is a brilient student 
     <div class="con">q</div>
     <div class="con"></div>
     <div class="con"></div>
